--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> Reinforcement Learning </title>
-        <script src="script.js" defer></script>
-    </head>
-    <body>
-      <canvas id="canvas">
-          Your browser doesn't support the Canvas API.
-      </canvas>
-    </body>
+  <head>
+    <title> Reinforcement Learning </title>
+    <script type='module' src="index.js" defer></script>
+  </head>
+  <body>
+    <canvas id="canvas">
+      Your browser doesn't support the Canvas API.
+    </canvas>
+  </body>
 </html>
 
 <style>
-
-* {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
-
+  * {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
 </style>
