added training message

--- a/snakeQLearning/index.html
+++ b/snakeQLearning/index.html
@@ -7,6 +7,7 @@
     <script type="module" src="index.js" defer></script>
   </head>
   <body>
+    <div id="training"> training for ~ 20 seconds </div>
     <canvas id="canvas">
       Your browser doesn't support the Canvas API.
     </canvas>
